--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.12.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-calendar": "^2.19.2",
